--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,13 @@ jobs:
         with:
           go-version: '1.21.6'
           id: go
+
+      - name: Install Golang-migrate
+        run:  |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin
+          which migrate
+
       - name: Run migrations
         run: make migrateUp
 
