--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5433:5432
 
     steps:
 
@@ -38,7 +40,7 @@ jobs:
       - name: Install Golang-migrate
         run:  |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.linux-amd64.tar.gz | tar xvz
-          sudo mv migrate /usr/bin
+          sudo mv migrate /usr/bin/migrate
           which migrate
 
       - name: Run migrations
