--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
           - 5433:5432
 
     steps:
+      - uses: actions/checkout@v3
+      - name: Check directory
+        run: ls -l
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -40,6 +43,8 @@ jobs:
       - name: Install Golang-migrate
         run:  |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate /usr/bin
+          which migrate
 
       - name: List directory contents
         run: ls -l
