--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -10,3 +10,4 @@ sql:
               sql_package: "database/sql"
               emit_json_tags: true
               emit_prepared_queries: true
+              emit_empty_slices: true
