initial mock database for testing

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,3 +11,4 @@ sql:
               emit_json_tags: true
               emit_prepared_queries: true
               emit_empty_slices: true
+              emit_interface: true
